--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
 		<header class="clearfix">
 			<div class="header-name">Asha Tad</div>
 			<nav class="nav-links">
-				<a href="index.html">About&nbsp;&nbsp;|&nbsp;&nbsp;</a>
-				<a href="contact.html">Contact&nbsp;&nbsp;|&nbsp;&nbsp;</a>
+				<a href="index.html">About</a>
+				<a href="contact.html">Contact</a>
 				<a href="portfolio.html">Portfolio</a>			
 			</nav>
 		</header>
