--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<header class="clearfix">
+		<header>
 			<div class="header-name">Asha Tad</div>
 			<nav class="nav-links">
 				<a href="index.html">About</a>
@@ -49,7 +49,7 @@
 			</section>			
 		</div>  
 
-		<footer class="clearfix"> 
+		<footer> 
 			&copy;Copyright 2017 Asha Tad
 		</footer> 
 	</div>
