--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<header class="clearfix">
+		<header>
 			<div class="header-name">Asha Tad</div>
 			<nav class="nav-links">
 				<a href="index.html">About</a>
@@ -47,7 +47,7 @@
 			</section>			
 		</div>  
 
-		<footer class="clearfix"> 
+		<footer> 
 			&copy;Copyright 2017 Asha Tad
 		</footer>
 	</div>
